# vllm_fa

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup.py
cmake/: utils.cmake
csrc/flash_attn/: flash_api.cpp
csrc/flash_attn/src/: attention_sum.h  attention_sum_PLB_v1.h  attention_sum_PLB_v2.h  attention_sum_v1.h  attention_sum_v2.h  attention_sum_v3.h  flash.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  flash_fwd_split_hdim128_bf16_causal_sm80.cu  flash_fwd_split_hdim128_bf16_sm80.cu  flash_fwd_split_hdim128_fp16_causal_sm80.cu  flash_fwd_split_hdim128_fp16_sm80.cu  flash_fwd_split_hdim160_bf16_causal_sm80.cu  flash_fwd_split_hdim160_bf16_sm80.cu  flash_fwd_split_hdim160_fp16_causal_sm80.cu  flash_fwd_split_hdim160_fp16_sm80.cu  flash_fwd_split_hdim192_bf16_causal_sm80.cu  flash_fwd_split_hdim192_bf16_sm80.cu  flash_fwd_split_hdim192_fp16_causal_sm80.cu  flash_fwd_split_hdim192_fp16_sm80.cu  flash_fwd_split_hdim224_bf16_causal_sm80.cu  flash_fwd_split_hdim224_bf16_sm80.cu  flash_fwd_split_hdim224_fp16_causal_sm80.cu  flash_fwd_split_hdim224_fp16_sm80.cu  flash_fwd_split_hdim256_bf16_causal_sm80.cu  flash_fwd_split_hdim256_bf16_sm80.cu  flash_fwd_split_hdim256_fp16_causal_sm80.cu  flash_fwd_split_hdim256_fp16_sm80.cu  flash_fwd_split_hdim32_bf16_causal_sm80.cu  flash_fwd_split_hdim32_bf16_sm80.cu  flash_fwd_split_hdim32_fp16_causal_sm80.cu  flash_fwd_split_hdim32_fp16_sm80.cu  flash_fwd_split_hdim64_bf16_causal_sm80.cu  flash_fwd_split_hdim64_bf16_sm80.cu  flash_fwd_split_hdim64_fp16_causal_sm80.cu  flash_fwd_split_hdim64_fp16_sm80.cu  flash_fwd_split_hdim96_bf16_causal_sm80.cu  flash_fwd_split_hdim96_bf16_sm80.cu  flash_fwd_split_hdim96_fp16_causal_sm80.cu  (+7 more)
tests/: flash_attn_wrapper.py  test_debug.py  test_output.py  test_vllm_flash_attn.py  test_vllm_flash_attn_kvcache.py  test_vllm_flash_attn_kvcache_time.py  test_vllm_flash_attn_kvcache_time_raw.py
vllm_flash_attn/: __init__.py  flash_attn_interface.py
